# HELIOS

./: README.md  feature.txt  main.py  pyproject.toml
organelle_pipeline/: __main__.py  heteroplasmy.py  isomer.py  mapping.py  models.py  parsers.py  pipeline.py  report.py  utils.py
runs/plastome/C2/report/: report.html
runs/plastome/C2/results/: summary.json
runs/plastome/D1/report/: report.html
runs/plastome/D1/results/: isomer_graph.gfa  summary.json
runs/plastome/MELOD1/report/: report.html
runs/plastome/MELOD1/results/: heteroplasmy.tsv  summary.json
runs/plastome/STB1/report/: report.html
runs/plastome/STB1/results/: isomer_proportions.tsv  summary.json
tests/: test_heteroplasmy.py  test_isomer.py  test_pipeline.py
