[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HELIOS"
version = "0.1.0"
description = "HELIOS: HEteroplasmy and Isomer Locator for Organelle Sequences"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "plotly>=5.0.0",
  "pysam>=0.22.0",
]

[project.scripts]
helios = "organelle_pipeline.__main__:main"
organelle-pipeline = "organelle_pipeline.__main__:main"

[tool.executor.schemes.main]
cmd = "python main.py"

[tool.executor.schemes.pipeline]
cmd = "python organelle_pipeline/pipeline.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["organelle_pipeline*"]
